--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
             jQuery.get('citationByYear(0.8).json', function (data) {
                 citationByYear = data;
                 prepareCitationByYear();
-                // c3Draw();
                 echartsDraw();
             });
 
@@ -71,51 +70,8 @@
                 console.log(yearResult)
             }
 
-            function c3Draw() {
-                var svg = d3.select("svg"),
-                    margin = { top: 20, right: 20, bottom: 30, left: 40 },
-                    width = +svg.attr("width") - margin.left - margin.right,
-                    height = +svg.attr("height") - margin.top - margin.bottom;
+            function prepareCitationByConference(){
 
-                var x = d3.scaleBand().rangeRound([0, width]).padding(0.1),
-                    y = d3.scaleLinear().rangeRound([height, 0]);
-
-                var g = svg.append("g")
-                    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-                x.domain(yearResult.map(function (d) { return d.paper; }));
-                y.domain([0, d3.max(yearResult, function (d) { return d.count; })]);
-
-                // g.append("g")
-                //     .attr("class", "axis axis--x")
-                //     .attr("transform", "translate(0," + height + ")")
-                //     .call(d3.axisBottom(x));
-
-                g.append("g")
-                    .attr("class", "axis axis--y")
-                    // .call(d3.axisLeft(y).ticks(10, "%"))
-                    .append("text")
-                    .attr("transform", "rotate(-90)")
-                    .attr("y", 6)
-                    .attr("dy", "0.71em")
-                    .attr("text-anchor", "end")
-                    .text("count");
-
-                g.selectAll(".bar")
-                    .data(yearResult)
-                    .enter().append("rect")
-                    .attr("class", "bar")
-                    .attr("x", function (d) { return x(d.paper); })
-                    .attr("y", function (d) { return y(d.count); })
-                    .attr("width", x.bandwidth())
-                    .attr("height", function (d) { return height - y(d.count); })
-                    .attr("data-legend", function (d) { return d.paper });
-
-                legend = svg.append("g")
-                    .attr("class", "legend")
-                    .attr("transform", "translate(50,30)")
-                    .style("font-size", "12px")
-                    .call(d3.legend)
             }
 
             function echartsDraw() {
